syntax = "proto3";

package protobuf.mypackage;

import "src/messages/user.proto";
import "src/messages/error.proto";

service UserService {
    rpc getUser(UserRequest) returns(protobuf.messages.User) {}
    rpc getUsers(UserRequest) returns(UsersResponse) {}
}

message UserRequest {
    uint32 id = 1;
}

message Users {
    repeated protobuf.messages.User users = 1;
}

message UsersResponse {
    oneof response {
        Users data = 1;
        protobuf.error.Error error = 2;
    }
}
